@@ -2259,6 +2259,7 @@ uint32_t ibis::roster::locate(const double& v) const {
 template <typename T> int
 ibis::roster::icSearch(const ibis::array_t<T>& vals,
 		       std::vector<uint32_t>& pos) const {
+    int ierr;
     std::string evt;
     if (ibis::gVerbose > 3) {
         evt = "roster[";
@@ -2274,10 +2275,18 @@ ibis::roster::icSearch(const ibis::array_t<T>& vals,
     }
     const uint32_t nrows = col->partition()->nRows();
     if (ind.size() != nrows) { // not a valid index array
-        LOGGER(ibis::gVerbose > 3)
-            << "Warning -- " << evt << " can not continue with ind["
-            << ind.size() << "], need ind to have " << nrows << " rows";
-	return -1;
+        if (col->partition()->currentDataDir() != 0) { // one more try
+            ierr = const_cast<ibis::roster*>(this)->read((const char*)0);
+        }
+        else {
+            ierr = -1;
+        }
+        if (ierr < 0 || ind.size() != nrows) {
+            LOGGER(ibis::gVerbose > 3)
+                << "Warning -- " << evt << " can not continue with ind["
+                << ind.size() << "], need ind to have " << nrows << " rows";
+            return -1;
+        }
     }
 
     std::string fname = col->partition()->currentDataDir();
@@ -2295,7 +2304,7 @@ ibis::roster::icSearch(const ibis::array_t<T>& vals,
         << evt << " attempt to read the content of " << fname
 	<< " to locate " << vals.size() << " value"
 	<< (vals.size()>1?"s":"");
-    int ierr = ibis::fileManager::instance().getFile(fname.c_str(), tmp);
+    ierr = ibis::fileManager::instance().getFile(fname.c_str(), tmp);
     if (ierr == 0) { // got the sorted values
 	while (iv < nvals && it < nrows) {
 	    // move iv so that vals[iv] is not less than tmp[it]
@@ -2359,14 +2368,27 @@ ibis::roster::icSearch(const ibis::array_t<T>& vals,
 /// Out-of-core search function.  It requires at least .ind file to be in
 /// memory.  Need to implement a version that can read both .ind and .srt
 /// files during search.
+///
 /// @note This function only adds more positions to pos.  The caller needs
-/// to initialize the output array if necessary.
+/// to initialize the output array as necessary.
 template <typename T> int
 ibis::roster::oocSearch(const ibis::array_t<T>& vals,
 			std::vector<uint32_t>& pos) const {
-    // explicitly generate the sorted values
+    const uint32_t nvals = vals.size();
+    const uint32_t nrows = col->partition()->nRows();
+    // attempt to ensure the sorted values are available
     int ierr = writeSorted(static_cast<const char*>(0));
-    if (ierr < 0) return ierr;
+    if (ierr < 0) {
+        if (col->partition()->currentDataDir() != 0) { // one more try
+            ierr = const_cast<ibis::roster*>(this)->read((const char*)0);
+        }
+        else {
+            ierr = -1;
+        }
+        if (ierr < 0 || ind.size() != nrows) {
+            return ierr;
+        }
+    }
 
     std::string evt;
     if (ibis::gVerbose > 3) {
@@ -2391,8 +2413,6 @@ ibis::roster::oocSearch(const ibis::array_t<T>& vals,
 	<< " to locate " << vals.size() << " value"
 	<< (vals.size()>1?"s":"");
 
-    const uint32_t nvals = vals.size();
-    const uint32_t nrows = col->partition()->nRows();
     int srtdes = UnixOpen(fname.c_str(), OPEN_READONLY);
     if (srtdes < 0) {
 	LOGGER(ibis::gVerbose > 0)
@@ -2570,6 +2590,7 @@ ibis::roster::oocSearch(const ibis::array_t<T>& vals,
 template <typename T> int
 ibis::roster::icSearch(const std::vector<T>& vals,
 		       std::vector<uint32_t>& pos) const {
+    int ierr;
     std::string evt;
     if (ibis::gVerbose > 3) {
         evt = "roster[";
@@ -2585,10 +2606,18 @@ ibis::roster::icSearch(const std::vector<T>& vals,
     }
     const uint32_t nrows = col->partition()->nRows();
     if (ind.size() != nrows) { // not a valid index array
-        LOGGER(ibis::gVerbose > 3)
-            << "Warning -- " << evt << " can not continue with ind["
-            << ind.size() << "], need ind to have " << nrows << " rows";
-	return -1;
+        if (col->partition()->currentDataDir() != 0) { // one more try
+            ierr = const_cast<ibis::roster*>(this)->read((const char*)0);
+        }
+        else {
+            ierr = -1;
+        }
+        if (ierr < 0 || ind.size() != nrows) {
+            LOGGER(ibis::gVerbose > 3)
+                << "Warning -- " << evt << " can not continue with ind["
+                << ind.size() << "], need ind to have " << nrows << " rows";
+            return -1;
+        }
     }
 
     std::string fname = col->partition()->currentDataDir();
@@ -2606,7 +2635,7 @@ ibis::roster::icSearch(const std::vector<T>& vals,
 	<< evt << " attempt to read the content of " << fname
 	<< " to locate " << vals.size() << " value"
 	<< (vals.size()>1?"s":"");
-    int ierr = ibis::fileManager::instance().getFile(fname.c_str(), tmp);
+    ierr = ibis::fileManager::instance().getFile(fname.c_str(), tmp);
     if (ierr == 0) { // got the sorted values
 	while (iv < nvals && it < nrows) {
 	    // move iv so that vals[iv] is not less than tmp[it]
@@ -2674,9 +2703,21 @@ ibis::roster::icSearch(const std::vector<T>& vals,
 template <typename T> int
 ibis::roster::oocSearch(const std::vector<T>& vals,
 			std::vector<uint32_t>& pos) const {
-    // explicitly generate the sorted values
+    const uint32_t nvals = vals.size();
+    const uint32_t nrows = col->partition()->nRows();
+    // attempt to ensure the sorted values are available
     int ierr = writeSorted(static_cast<const char*>(0));
-    if (ierr < 0) return ierr;
+    if (ierr < 0) {
+        if (col->partition()->currentDataDir() != 0) { // one more try
+            ierr = const_cast<ibis::roster*>(this)->read((const char*)0);
+        }
+        else {
+            ierr = -1;
+        }
+        if (ierr < 0 || ind.size() != nrows) {
+            return ierr;
+        }
+    }
 
     std::string evt;
     if (ibis::gVerbose > 3) {
@@ -2701,8 +2742,6 @@ ibis::roster::oocSearch(const std::vector<T>& vals,
 	<< " to locate " << vals.size() << " value"
 	<< (vals.size()>1?"s":"");
 
-    const uint32_t nvals = vals.size();
-    const uint32_t nrows = col->partition()->nRows();
     int srtdes = UnixOpen(fname.c_str(), OPEN_READONLY);
     if (srtdes < 0) {
 	LOGGER(ibis::gVerbose > 0)
